<resources>
    <string name="app_name">Utalk</string>
    <string name="mainlogo">mainlogo</string>
    <string name="uday_chugh">Uday Chugh</string>
    <string name="from">from</string>
    <string name="Conti">Continue</string>
    <string name="please_enter_your_mobile_number_you_will_get_a_sms_including_a_verification_code">Please enter your mobile number.You will get a SMS including a verification code.</string>
    <string name="welcome">Welcome to Utalk</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="send_verification_code">send verification code</string>
    <string name="resend_sms">Resend SMS</string>
    <string name="enter_6_digit_code">Enter 6-digit code</string>
    <string name="hintofotp">------</string>
    <string name="waiting_to_automatically_detect_an_sms_sent_to">Waiting to automatically detect an SMS sent to</string>
    <string name="please_provided_your_name_and_an_profile_photo">Please provided your name and an profile photo</string>
    <string name="profile_info">Profile Info</string>
    <string name="type_your_name_here">Type your name here</string>
    <string name="next">next</string>
    <string name="chats">Chats</string>
    <string name="people">People</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>