<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".otpActivity">

    <TextView
        android:id="@+id/verifyTv"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange_dark"
        android:textSize="22sp"
        android:layout_gravity="center_horizontal"
        tools:text="Verify +91 98765 43210" />


    <TextView
        android:id="@+id/waitingTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/waiting_to_automatically_detect_an_sms_sent_to"
        android:textSize="17sp" />


    <TextView
        android:id="@+id/counterTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="4dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/sentcodeEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:imeActionId="6"
        android:imeActionLabel="Send"
        android:imeOptions="actionUnspecified"
        android:inputType="phone"
        android:letterSpacing="0.8"
        android:maxLines="1"
        android:maxLength="6"
        android:hint="@string/hintofotp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:singleLine="true"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/enter_6_digit_code"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/verificationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="15dp"
        android:background="@color/orange_dark"
        app:backgroundTint="@color/orange_dark"
        android:text="@string/send_verification_code"
        android:textAllCaps="true"
        android:textColor="#fff"
        android:textSize="16sp"
        app:cornerRadius="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resendBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:enabled="false"
        android:gravity="center"
        android:padding="15dp"
        android:background="@color/orange_dark"
        app:backgroundTint="@color/orange_dark"
        android:text="@string/resend_sms"
        android:textColor="#fff"
        android:textSize="16sp"
        app:cornerRadius="5dp" />

</LinearLayout>