<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".PhoneNoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textAlignment="center"
        android:text="@string/welcome"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/orange_dark"
        android:textSize="28sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/verify_your_number"
        android:textColor="#515151"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/please_enter_your_mobile_number_you_will_get_a_sms_including_a_verification_code"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal">


        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_showNameCode="false"
            tools:ccp_contentColor="#fcfdfd"
            tools:ccp_textSize="20dp" />

        <EditText
            android:id="@+id/phoneNumberEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:imeActionId="6"
            android:hint="@string/enter_your_number"
            android:imeActionLabel="Send"
            android:imeOptions="actionUnspecified"
            android:inputType="phone"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="20sp" />


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/nextBtn"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/Conti"
        android:textAllCaps="true"
        android:background="@color/orange_dark"
        android:backgroundTint="@color/orange_dark"
        app:backgroundTintMode="add"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="normal"
        app:cornerRadius="5dp" />

</LinearLayout>